overflowing issue for mobile: fix

--- a/src/App.css
+++ b/src/App.css
@@ -101,10 +101,13 @@ body {
 }
 
 #hero-wrapper .scroll-text {
+  display: grid;
+  place-items: center;
   position: absolute;
   color: var(--primary);
   background-color: var(--secondary);
-  padding: 50% 90%;
+  width: 90%;
+  height: 50%;
 }
 
 #hero-wrapper .scroll-text h1 {
